--- a/wx/project.config.json
+++ b/wx/project.config.json
@@ -13,12 +13,14 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
-	"appid": "wx9b67c535e490e5f7",
-	"projectname": "wxminiProgram",
+	"appid": "wx2df23ed4ef781f2d",
+	"projectname": "wx",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
 	"isGameTourist": false,
+	"simulatorType": "wechat",
+	"simulatorPluginLibVersion": {},
 	"condition": {
 		"search": {
 			"current": -1,
