--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
-	"appid": "wx2df23ed4ef781f2d",
+	"appid": "wx9b67c535e490e5f7",
 	"projectname": "wx",
 	"debugOptions": {
 		"hidedInDevtools": []
