--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.4",
-	"appid": "wx2df23ed4ef781f2d",
+	"appid": "wxd7788bd36ac1bf34",
 	"projectname": "wx",
 	"debugOptions": {
 		"hidedInDevtools": []
